--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -16,7 +16,8 @@ $dark:#1D1C21;
 $light-gray:#F6F6F6;
 $gray:#CECECE;
 //$color-primary:#043c5c;
-$color-primary:#003f5e ;
+$color-primary:#003f5e;
+$color-primary-milky: rgba(0, 63, 94, .7);
 $color-secondary:#0190CC;
 $color-tertiary:#545454;
 //$color-tertiary:#0494d4;
